tests/paczka1/fuzzy1/95691367.err
Error in line 21: ErtvbZMjBc S29 67,0
Error in line 25: II5g3nv15 S854 201,5
Error in line 22: u5XhNxA S29 77,5
